[gd_scene load_steps=2 format=3 uid="uid://b7xqhbpbpiay1"]

[ext_resource type="Script" path="res://addons/ac_engine/scripts/combat_esc.gd" id="1_tobe8"]

[node name="AcCombatEsc" type="Node" node_paths=PackedStringArray("user_interface", "btn_esc", "btn_resume", "btn_exit", "container")]
script = ExtResource("1_tobe8")
user_interface = NodePath("UserInterface")
btn_esc = NodePath("BtnEsc")
btn_resume = NodePath("UserInterface/Panel/Container/BtnResume")
btn_exit = NodePath("UserInterface/Panel/Container/BtnExit")
container = NodePath("UserInterface/Panel/Container")

[node name="UserInterface" type="MarginContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = -2.6
anchor_right = -2.6
offset_left = 2995.2
offset_right = 4147.2
offset_bottom = 832.0

[node name="Panel" type="Panel" parent="UserInterface"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 448.0
offset_top = 320.0
offset_right = 704.0
offset_bottom = 512.0

[node name="Label" type="Label" parent="UserInterface/Panel/Container"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UserInterface/Panel/Container"]
layout_mode = 2

[node name="BtnResume" type="Button" parent="UserInterface/Panel/Container"]
layout_mode = 2
text = "RESUME"

[node name="BtnExit" type="Button" parent="UserInterface/Panel/Container"]
layout_mode = 2
text = "EXIT"

[node name="BtnEsc" type="Button" parent="."]
anchors_preset = -1
anchor_left = -2.6
anchor_right = -2.6
offset_left = 3003.2
offset_top = 8.0
offset_right = 3115.2
offset_bottom = 56.0
text = "MENU"
